Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -1,4 +1,18 @@
 #summary Ypsilon Development Roadmap
 
-version 0.9.5
-  * Initial release (comming soon)
+version 0.9.5 (comming soon)
+  * initial release
+  * interactive interpreter
+  * debug feature
+  * standard libraries
+  * ffi
+
+version 1.0
+  * stabilize
+
+version 1.x
+  * multi-thread
+  * native code generation
+
+version 2.0
+  * stabilize
