Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -11,7 +11,7 @@ version 1.0
   * stabilize
 
 version 1.x
-  * multi-thread VM
+  * multi-thread virtual machine
   * native code generation
 
 version 2.0
