Edited wiki page through web user interface.

--- a/wiki/KnownBugs.wiki
+++ b/wiki/KnownBugs.wiki
@@ -1,4 +1,4 @@
 #summary Known Bugs of current release
 
 version 0.9.5:
-  * [http://code.google.com/p/ypsilon/issues/detail?id=1&can=1 Issue 1:] free-identifier=? does not work correctly. (fixed and trunk is updated)
+  * [http://code.google.com/p/ypsilon/issues/detail?id=1&can=1 Issue 1]: free-identifier=? does not work correctly. (fixed and trunk is updated)
