--- a/wiki/KnownBugs.wiki
+++ b/wiki/KnownBugs.wiki
@@ -1,5 +1,5 @@
 #summary Known bugs in current release
 
 version 0.9.5:
-  * [http://code.google.com/p/ypsilon/issues/detail?id=1&can=1 Issue 1]: free-identifier=? does not work correctly. (fixed and trunk is updated)
+  * [http://code.google.com/p/ypsilon/issues/detail?id=1&can=1 Issue 1]: free-identifier=? does not work correctly. (fixed, trunk contains updated code)
   * See [http://code.google.com/p/ypsilon/issues/list Issues list] to check more.
