--- a/wiki/Changes.wiki
+++ b/wiki/Changes.wiki
@@ -2,5 +2,6 @@
 
 version 0.9.5-trunk:
   * [http://code.google.com/p/ypsilon/issues/detail?id=7&can=1 Issue 7]: added library-extensions
-  * [http://code.google.com/p/ypsilon/issues/detail?id=8&can=1 Issue 8]: added uninstall target to Makefile 
+  * [http://code.google.com/p/ypsilon/issues/detail?id=8&can=1 Issue 8]: added uninstall target to Makefile
   * Top-level program syntax will be checked if it have `#!r6rs` before import form
+  * [http://code.google.com/p/ypsilon/issues/detail?id=11&can=1 Issue 11]: record printer use write instead of display 
