--- a/wiki/KnownBugs.wiki
+++ b/wiki/KnownBugs.wiki
@@ -9,5 +9,7 @@ version 0.9.5:
   * [http://code.google.com/p/ypsilon/issues/detail?id=9&can=1 Issue 9]: dot lexical syntax problem. (fixed, trunk contains updated code)
   * [http://code.google.com/p/ypsilon/issues/detail?id=10&can=1 Issue 10]: define-condition-type problem. (fixed, trunk contains updated code)
   * [http://code.google.com/p/ypsilon/issues/detail?id=13&can=1 Issue 13]: syntax-rules problem. (fixed, trunk contains updated code)
+  * [http://code.google.com/p/ypsilon/issues/detail?id=14&can=1 Issue 14]: Makefile permission problem. (fixed, trunk contains updated code)
+  * [http://code.google.com/p/ypsilon/issues/detail?id=16&can=1 Issue 16]: REPL hygiene problem. (fixed, trunk contains updated code)
 
   * See [http://code.google.com/p/ypsilon/issues/list Issues list] to check more.
