Edited wiki page through web user interface.

--- a/wiki/Changes.wiki
+++ b/wiki/Changes.wiki
@@ -4,4 +4,6 @@ version 0.9.5-trunk:
   * [http://code.google.com/p/ypsilon/issues/detail?id=7&can=1 Issue 7]: added library-extensions
   * [http://code.google.com/p/ypsilon/issues/detail?id=8&can=1 Issue 8]: added uninstall target to Makefile
   * Top-level program syntax will be checked if it have `#!r6rs` before import form
-  * [http://code.google.com/p/ypsilon/issues/detail?id=11&can=1 Issue 11]: record printer use write instead of display 
+  * [http://code.google.com/p/ypsilon/issues/detail?id=11&can=1 Issue 11]: record printer use write instead of display
+
+  * See [KnownBugs Known bugs in current release] to check more changes.
