--- a/wiki/KnownBugs.wiki
+++ b/wiki/KnownBugs.wiki
@@ -6,7 +6,7 @@ version 0.9.5-update1 (based on revision 69):
   * [http://code.google.com/p/ypsilon/issues/detail?id=29&can=1 Issue 29]: `free-identifier=?` problem with shadowed identifer.
   * [http://code.google.com/p/ypsilon/issues/detail?id=30&can=1 Issue 30]: `Test Arithmetics` enter an infinite loop on MacOS X 10.5 Leopard.
 
-  * _Above bugs are fixed in version 0.9.5-trunk_
+  * _Above bugs are fixed in [http://code.google.com/p/ypsilon/source/checkout version 0.9.5-trunk]._
   * See [http://code.google.com/p/ypsilon/issues/list Issues list] to check more.
 
 version 0.9.5:
@@ -38,4 +38,4 @@ version 0.9.5:
   * reading inexact number possibly cause memory overflow.
   * `bitwise-arithmetic-shift` does not work correctly for fixnum.
 
-  * _All bugs are fixed in version 0.9.5-update1_
+  * _All bugs in version 0.9.5 are fixed in version 0.9.5-update1_
